pxc/tests/test_031_thrattr/up3.px
public namespace up3;
import common -;

mtvaluetype struct bar {
  int z;
}

threaded function {f} int fts(int x)
{
  int r = f(3 + x);
  return r;
}

struct foo(bar const& bx) {
  int x;
  int y;
  bar b;
  function int getbz() const {
    threaded function int foo(int x) { // error: outer function is not threaded
      return x;
    }
    int x = fts{foo}(5);
    return x;
  }
}

function void t1() {
  foo f = foo(bar(55));
  println(f.getbz());
}

t1();

